@startuml

skinparam Dpi 200
skinparam DefaultFont {
    Name Menlo
    Size 13
    Style bold
}
skinparam ClassAttributeIconSize 0

namespace backend {
    User "1..1" *-- "1..*" UserInfo
    User "1..1" *-- "0..*" TravelGroup
    TravelGroup "1..1" o-- "0..*" Travel
    Travel "1..1" *-- "1..1" TravelInfo
    Travel "1..*" <.. "0..*" User
    Travel "1..*" <.. "0..*" UserInfo
    TravelInfo "1..1" o-- "1..1" City
    TravelInfo "1..1" *-- "2..2" Time

    class User {
        - user_id: int {readonly,frozen}
        - user_info: UserInfo
        - friend_info_list: UserInfo[0..*]
        - friend_note_list: str[0..*]
        - travel_group_list: TravelGroup[0..*]
        + get_user_id(): int
        + get_user_info(): UserInfo
        + get_friend_info_list(): UserInfo[0..*]
        + get_friend_note_list(): str[0..*]
        + get_travel_group_list(): TravelGroup[0..*]
        + add_travel_group(): int
        + del_travel_group(travel_group_id: int): int
    }

    class UserInfo {
        - user_id: int {readonly,frozen}
        - user_name: str
        - email: str
        - gender: Gender
        - resident_city: City
        + get_user_id(): int
        + get_user_name(): str
        + set_user_name(user_name: str): int
        + get_email(): str
        + set_email(email: str): int
        + get_gender(): Gender
        + set_gender(gender: Gender): int
        + get_resident_city(): City
        + set_resident_city(city_id: int): int
    }

    class TravelGroup {
        - user_id: int {readonly,frozen}
        - travel_group_id: int {readonly,frozen}
        - travel_group_note: str
        - travel_list: Travel[0..*]
        + get_user_id(): int
        + get_travel_group_id(): int
        + get_travel_group_note(): str
        + set_travel_group_note(travel_group_note: str): int
        + get_travel_list(): Travel[0..*]
        + add_travel(): int
        + del_travel(travel_id: int): int
    }

    class Travel {
        - user_id: int {readonly,frozen}
        - travel_id: int {readonly,frozen}
        - travel_info: TravelInfo
        - company_user_id_list: int[0..*]
        + get_user_id(): int
        + get_travel_id(): int
        + get_travel_info(): TravelInfo
        + add_company(company_user_id: int): int
        + del_company(company_user_id: int): int
        + move_to_travel_group(travel_group_id: int): int
        + move_to_new_travel_group(): int[2..2]
    }

    class TravelInfo {
        - user_id: int {readonly,frozen}
        - travel_id: int {readonly,frozen}
        - travel_note: str
        - city: City
        - time_start: Time
        - time_end: Time
        - visibility: Visibility
        + get_user_id(): int
        + get_travel_id(): int
        + get_travel_note(): str
        + set_travel_note(travel_note: str): int
        + get_city(): City
        + set_city(city_id: int): int
        + get_time_start(): Time
        + set_time_start(year: int, month: int, day: int): int
        + get_time_end(): Time
        + set_time_end(year: int, month: int, day: int): int
        + get_visibility(): Visibility
        + set_visibility(visibility: Visibility): int
    }

    class City {
        - city_id: int {readonly,frozen}
        - city_name: str {readonly,frozen}
        - latitude: float {readonly,frozen}
        - longitude: float {readonly,frozen}
        + get_city_id(): int
        + get_city_name(): str
        + get_latitude(): float
        + get_longitude(): float
    }

    class Time {
        - year: int
        - month: int
        - day: int
        + get_time(): int[3..3]
        + set_time(year: int, month: int, day: int): int
    }
}

@enduml
